--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
     <!-- PREMIUM ADMIN PANEL -->
     <div class="admin-panel">
         <div class="admin-header">
-            <h1 class="admin-title">Dashboard Premium Generator</h1>
+            <h1 class="admin-title">Dashboard BUKTI JP </h1>
             <div class="admin-controls">
                 <button class="btn-copy" onclick="copyFullScript()">
                     <span style="position: relative; z-index: 1;">📋 Copy Full Script</span>
@@ -696,36 +696,6 @@ z-index: 10001;
 <!-- Main Content -->
 <main>
 <h1 class="section-title">TVTOTO</h1>
-<div class="winner-grid">
-<!-- Winner 1 -->
-<article class="winner-card">
-<div class="badge">🎉 WITHDRAW SUCCESS</div>
-<figure class="img-wrapper"><img src="https://cdn.areabermain.club/assets/cdn/az1/2026/01/21/20260121/36fe7ad4acabae9b2a075f2d27e79d6c/whatsapp-image-2026-01-21-at-17-06-46.jpeg" alt="Winner Proof" loading="lazy" /></figure>
-<div class="card-info">
-<h3>User: [kexxxxg]</h3>
-<span class="prize-amount">Rp 100.000.000</span> <span class="game-name">PP LIVE - Korean Speed Baccarat 1</span>
-<div class="message">"Wah, kamu memang beruntung! Semoga kemenangan ini membawa lebih banyak rezeki."</div>
-</div>
-</article>
-<!-- Winner 2 -->
-<article class="winner-card">
-<div class="badge">🎉 WITHDRAW SUCCESS</div>
-<figure class="img-wrapper"><img src="https://cdn.areabermain.club/assets/cdn/az1/2026/01/21/20260121/96374fc57cce0da2f2449242b586768b/whatsapp-image-2026-01-20-at-10-02-11.jpeg" alt="Winner Proof" loading="lazy" /></figure>
-<div class="card-info">
-<h3>User: [kaxxxxx32]</h3>
-<span class="prize-amount">Rp 112.000.000</span> <span class="game-name">PP - Gates of Olympus Super Scatter</span>
-<div class="message">"Withdraw mudah dan Cepat Tanpa ada kendala apapun, Hanya di TVTOTO."</div>
-</div>
-</article>
-<!-- Winner 3 -->
-<article class="winner-card">
-<div class="badge">🎉 WITHDRAW SUCCESS</div>
-<figure class="img-wrapper"><img src="https://cdn.areabermain.club/assets/cdn/az1/2026/01/19/20260119/92b49dae278e1a1c8f2abd95884dc489/lebaran-semakin-dekat-cari-tambahan-thr-silahkan-merapat-ikan-sepat-di-atas-kompor-jangan-takut-rungkat-sudah-pasti-gacor-1.png" alt="Winner Proof" loading="lazy" /></figure>
-<div class="card-info">
-<h3>User: [txxxxxx2]</h3>
-<span class="prize-amount">Rp 200.000.000</span> <span class="game-name">Lottery - HOKI DRAW</span>
-<div class="message">"Jangan Tunda Rezekimu! Bermain sekarang &amp; raih kemenangan BESAR!"</div>
-</div>
 </article>
 </div>
 </main>
